<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/content.padding_top"
        android:paddingBottom="@dimen/content.padding_bottom"
        android:paddingRight="@dimen/content.padding_right"
        android:paddingLeft="@dimen/content.padding_left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction"
            android:id="@+id/introduction"
            android:textSize="16sp"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/right_way"
            android:id="@+id/right_way"
            android:layout_marginTop="40dp"
            android:elegantTextHeight="false"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            style="@style/AppTheme.Button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrong_way"
            android:id="@+id/wrong_way"
            android:layout_marginTop="22dp"
            android:theme="@style/AppTheme"
            style="@style/AppTheme.Button"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

    </LinearLayout>
</LinearLayout>
