<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diegoinsua.uibestpracticesexample.activities.EditNoteActivity"
    android:stretchColumns="0,1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@mipmap/edit_toolbar"
            android:layout_span="2"
            android:layout_gravity="left" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/noteText"
            android:layout_column="0"
            android:layout_span="2"
            android:inputType="text|textMultiLine"
            style="@style/AppTheme.NoteItemText"
            android:text="@string/lorem_ipsum"
            android:gravity="top"
            android:background="@drawable/border_gray"
            android:padding="10dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_edition_cancel"
            android:id="@+id/cancel"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_edition_save"
            android:id="@+id/save"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />
    </TableRow>

</TableLayout>
